classDiagram
    class Product {
        <<Abstract>>
        #long id
        +getId() long
        +setId(long id) void
    }

    class Publication {
        <<Abstract>>
        -String title
        -double price
        -int copies
        +getTitle() String
        +setTitle(String title) void
        +getPrice() double
        +setPrice(double price) void
        +getCopies() int
        +setCopies(int copies) void
    }

    class Book {
        -String author
        +getAuthor() String
        +setAuthor(String author) void
    }

    class Magazine {
        -LocalDateTime currentIssue
        -int orderQty
        +getCurrentIssue() LocalDateTime
        +setCurrentIssue(LocalDateTime currentIssue) void
        +getOrderQty() int
        +setOrderQty(int orderQty) void
    }

    class DiscMag {
        -boolean hasDisc
        +isHasDisc() boolean
        +setHasDisc(boolean hasDisc) void
    }

    class Ticket {
        +sellItem() boolean
    }

    class Vehicle {
        <<Abstract>>
        -String engineType
        +getEngineType() String
        +setEngineType(String engineType) void
    }

    class Car {
        -int numberOfDoors
        +getNumberOfDoors() int
        +setNumberOfDoors(int numberOfDoors) void
        +sellItem() boolean
    }

    class Motorcycle {
        -boolean hasSidecar
        +isHasSidecar() boolean
        +setHasSidecar(boolean hasSidecar) void
        +sellItem() boolean
    }

    class Cart {
        -long id
        -Set~Product~ products
        +getId() long
        +getProducts() Set~Product~
        +setProducts(Set~Product~ products) void
        +addProduct(Product product) void
        +removeProduct(Product product) void
    }

    class OrderEntity {
        -long id
        -double totalAmount
        -LocalDateTime orderDate
        -Set~Product~ products
        +getId() long
        +setId(long id) void
        +getTotalAmount() double
        +setTotalAmount(double totalAmount) void
        +getOrderDate() LocalDateTime
        +setOrderDate(LocalDateTime orderDate) void
        +getProducts() Set~Product~
        +setProducts(Set~Product~ products) void
        +addProduct(Product product) void
        +removeProduct(Product product) void
        +calculateTotal() double
    }

    class SaleableItem {
        <<Interface>>
        +sellItem() boolean
    }

%% Inheritance/Extension Relationships
    Product <|-- Publication : extends
    Publication <|-- Book : extends
    Publication <|-- Magazine : extends
    Product <|-- Ticket : extends
    Product <|-- Vehicle : extends
    Magazine <|-- DiscMag : extends
    Vehicle <|-- Car : extends
    Vehicle <|-- Motorcycle : extends

%% Interface Implementation
    SaleableItem <|.. Ticket : implements
    SaleableItem <|.. Car : implements
    SaleableItem <|.. Motorcycle : implements

%% Association Relationships
    Cart "1" -- "*" Product : contains
    Product "*" -- "*" Cart : in carts
    OrderEntity "*" -- "*" Product : contains
    Product "*" -- "*" OrderEntity : in orders